# tribo-slide

./: .gitignore  README.md
MLSTM-FCN-1/: environment.yml  pip_requirements.txt  tribo_model.py
MLSTM-FCN-1/data/: data_v1_square.csv  data_v1_triangle.csv
MLSTM-FCN-1/utils/: generic_utils.py  keras_utils.py
MLSTM-FCN-1/weights/: tribo__weights.h5
MLSTM-FCN-torch/: train.py
MLSTM-FCN-torch/data/Libras/: X_test.npy  X_train.npy  y_test.npy  y_train.npy
MLSTM-FCN-torch/data/tribo-250103/: generate_dataset.py  generate_dataset_v2.py  generate_tribo_dataset.py  y_test.npy  y_train.npy
MLSTM-FCN-torch/model/: mlstm_fcn.py
MLSTM-FCN-torch/output/: plot_output.py
MLSTM-FCN-torch/utils/: generic_utils.py  json_logger.py  torch_utils.py
data_collection/: ros_tribo.sh  tribo_calibration.txt
data_collection/data/: graph.m
data_collection/slide-bspline/: bspline.py  path_0.csv  path_1.csv  path_2.csv  path_3.csv  path_4.csv  path_Bspline.py  path_test.csv  path_test.py
data_collection/slide-shape/: path_basic.py  path_circle.csv  path_diagonal1.csv  path_diagonal2.csv  path_diagonal3.csv  path_diagonal4.csv  path_generator.py  path_square.csv  path_squareCCW.csv  path_triangle.csv
data_collection/slide-spline/: path_01.csv  path_02.csv  path_03.csv  path_04.csv  path_05.csv  path_06.csv  path_07.csv  path_08.csv  path_09.csv  path_10.csv  path_11.csv  path_12.csv  path_13.csv  path_14.csv  path_15.csv  path_16.csv  path_17.csv  path_18.csv  path_19.csv  path_20.csv  path_generator.py  path_sliding_v1.ai  path_transform.py
data_collection/touch-16by16/: urscript.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/tribo/lib/tribo/: sensorRFT  sensorT  writer
ros2_ws/install/tribo/share/tribo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/tribo_plot/lib/tribo_plot/: app1  models  plot_sensor  sensorT_fake
ros2_ws/install/tribo_plot/share/tribo_plot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/ur_test/lib/ur_test/: tcp_pose_node  ur_command_listener  ur_command_node
ros2_ws/install/ur_test/share/ur_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/tribo/: CMakeLists.txt  package.xml
ros2_ws/src/tribo/launch/: tribo_launch.py
ros2_ws/src/tribo/src/: RFT_UART.h  sensor_RFT.cpp  sensor_T.cpp  writer.cpp
ros2_ws/src/tribo_plot/: env.sh  setup.cfg  setup.py
ros2_ws/src/ur_test/: CMakeLists.txt
ros2_ws/src/ur_test/src/: tcp_pose_node.cpp  ur_command_listener.cpp  ur_command_node.cpp
(+14 files in other folders)
