<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tribo_plot</name>
  <version>0.0.0</version>
  <description>Real-time plotting for sensor data using PyQtGraph</description>
  <maintainer email="kang@todo.todo">kang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyqtgraph</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
